[gd_scene load_steps=4 format=2]

[ext_resource path="res://Pieces/Piece.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Assets/Piece_Background.png" type="Texture" id=3]

[node name="Piece" type="Node2D"]
visible = false
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]
